# AI_Projects

DeepResearch_Agents/: DeepResearch Agents_OpenAI SDK.ipynb  deep_research.py  email_agent.py  main.py  planner_agent.py  pyproject.toml  research_manager.py  search_agent.py  writer_agent.py
News_research_project/: main.py  pyproject.toml  requirements.txt
RAG_LlamaIndex/: RAG_Llamaindex.ipynb  RAG_engine.py  main.py  pyproject.toml
RAG_LlamaIndex/chroma_db/: chroma.sqlite3
RAG_Research_paper_chatbot/: main.py  pyproject.toml  rag_bot.py  rag_research.ipynb  requirements.txt
RAG_Research_paper_chatbot/chroma_db/: chroma.sqlite3
customer_support_agent_crew/: L3_customer_support.ipynb  pyproject.toml
customer_support_agent_crew/src/customer_support/: crew.py  main.py
customer_support_agent_crew/src/customer_support/config/: agents.yaml  tasks.yaml
