[project]
name = "news-research-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "unstructured>=0.18.11",
]
