[project]
name = "rag-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "llama-index>=0.13.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-gemini>=0.6.0",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-llms-groq>=0.4.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "streamlit>=1.47.1",
]
