[project]
name = "customer_support"
version = "0.1.0"
description = "customer_support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
customer_support = "customer_support.main:run"
run_crew = "customer_support.main:run"
train = "customer_support.main:train"
replay = "customer_support.main:replay"
test = "customer_support.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
